# CircuitPython_Gizmo

./: .gitignore  README.md  circuitpython_gizmo.py  gizmo.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release_gh.yml
examples/: analog_sensor.py  basic_robot.py  best_default_program.py  digital_sensor.py
