# SPDX-FileCopyrightText: Copyright (c) 2024 Gizmo Team & Contributors
#
# SPDX-License-Identifier: ISC

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-gizmo"
description = "Support library for the Gizmo robotics platform."
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Gizmo Team & Contributors"}
]
urls = {Homepage = "https://github.com/gizmo-platform/CircuitPython_Gizmo"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "gizmo",
    "robotics",
    "control",
    "communication",
]
license = {text = "ISC"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["circuitpython_gizmo"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
